# GeometricAlgebra.jl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NEWS.md  NOTICE  Project.toml  README-Template-Usage.md  README.md  pyproject.toml
dev/: index.html  search_index.js
docs/: Project.toml  make.jl
extras/: dot-envrc  envrc.template
spikes/: Blade_operations_mgs.jl
src/: AbstractBlade.jl  AbstractBlade_operators.jl  AbstractMultivector.jl  AbstractMultivector_operators.jl  AbstractScalar.jl  AbstractScalar_operators.jl  Blade.jl  Blade_comparison_operators.jl  Blade_operators.jl  Blade_operators_mgs.jl  Example.jl.template  GeometricAlgebra.jl  Multivector.jl  Multivector_operators.jl  One.jl  One_operators.jl  Pseudoscalar.jl  Pseudoscalar_operators.jl  Scalar.jl  Scalar_operators.jl  Zero.jl  Zero_operators.jl  abstract_types.jl  blade.jl  blade_comparison_operators.jl  blade_operators.jl  multivector.jl  operations.jl  operators.jl  operators_mgs.jl
test/: AbstractMultivector_operator_tests.jl  AbstractScalar_operator_tests.jl  Blade_operator_tests.jl  Blade_tests.jl  Example_tests.jl.template  GeometricAlgebra_tests.jl  Multivector_tests.jl  OneBlade_tests.jl  One_operator_tests.jl  One_tests.jl  Project.toml  Pseudoscalar_operator_tests.jl  Pseudoscalar_tests.jl  ScalarInf_tests.jl  ScalarOne_tests.jl  ScalarZero_tests.jl  Scalar_operator_tests.jl  Scalar_tests.jl  ZeroBlade_tests.jl  Zero_operator_tests.jl  Zero_tests.jl  binary_operator_tests.jl  blade_binary_operator_tests.jl  blade_comparison_operator_tests.jl  blade_core_operator_tests.jl  (+25 more)
(+51 files in other folders)
